# sopel-botprompts

./: README.md  requirements.txt  setup.cfg  setup.py
sopel_botprompts/: __init__.py  botprompts.py  config.py  plugin.py
