[metadata]
name = sopel-botprompts
version = 1.0.2
author = ltnyet
author_email = 130899831+ltnyet@users.noreply.github.com
description = A Sopel IRC module for using a bot prompt repository and interacting with ChatGPT
keywords = sopel plugin bot irc chatgpt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lowtechcoop/sopel-botprompts
project_urls =
    Bug Tracker = https://github.com/lowtechcoop/sopel-botprompts/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.7, <4
install_requires =
    sopel>=7.1,<8
    Jinja2>=3.1,<4
    validators>=0.20,<1

[options.entry_points]
sopel.plugins =
    botprompts = sopel_botprompts.plugin

